Fixed alignment for items in #navbar.open

--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -63,7 +63,12 @@
     ul {
         li {
             width: 100%;
-            margin: 20px 0;
+            margin: 17px 0;
+            padding: 0 !important;
+
+            &:first-of-type {
+                margin-top: 0;
+            }
         }
 
         text-align: center;
